# flask-tailwind

./: .cruft.json  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/flask_tailwind/: __init__.py  cli.py  extension.py  npm.py  tags.py
src/flask_tailwind/cruft/: bs.config.js  package.json  postcss.config.js  tailwind.config.js
tests/: __init__.py  test_flask_tailwind.py  test_run_pyanalize.py
