[tool.poetry]
name = "flask-tailwind"
version = "0.1.8"
homepage = "https://github.com/abilian/flask-tailwind"
description = "Flask+Tailwind integration."
authors = ["Abilian SAS <contact@abilian.com>"]
readme = "README.rst"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "flask_tailwind", from = "src" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.plugins."flask.commands"]
tailwind = "flask_tailwind.cli:tailwind"


[tool.poetry.dependencies]
python = ">=3.8,<4"

Flask = "^2.2.0"


[tool.poetry.dev-dependencies]
## Standard cruft

# Debug
devtools = "^0.9.0"

# Testing
pytest = "*"
pytest-cov = "*"
coveralls = "*"

# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mccabe = "*"
mypy = "*"
pyanalyze = "0.5.*"

# Incompatible with recent version of Flake8
# flake8-pytest = "*"
# mastool = "*"

# Formatting
isort = "*"
black = "*"

# Other tools
profilehooks = "*"
pre-commit = "*"
safety = "*"

# Needed for some reason
pyyaml = "*"

# Doc
restructuredtext_lint = "*"

## /standard cruft
pyupgrade = "^2.37.3"
 

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyanalyze]
paths = ["src/"]
import_paths = ["."]

# Additional checks
bare_ignore = true
incompatible_override = true
missing_f = true
suggested_parameter_type = true
unused_ignore = true
use_fstrings = true
value_always_true = true

# TODO: fix issues and activate
# enforce_no_unused = true
# missing_parameter_annotation = true
# missing_return_annotation = true
# suggested_return_type = true

