[tool.poetry]
name = "flask-tailwind"
version = "0.2.1"
homepage = "https://github.com/abilian/flask-tailwind"
description = "Flask+Tailwind integration."
authors = ["Abilian SAS <contact@abilian.com>"]
readme = "README.rst"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "flask_tailwind", from = "src" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.plugins."flask.commands"]
tailwind = "flask_tailwind.cli:tailwind"


[tool.poetry.dependencies]
python = ">=3.9,<4"

Flask = "^2"


[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"

# Debug
devtools = "^0.10"

# Needed for some reason
pyyaml = "*"

# Doc
restructuredtext_lint = "*"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyanalyze]
paths = ["src/"]
import_paths = ["."]

# Additional checks
bare_ignore = true
incompatible_override = true
missing_f = true
suggested_parameter_type = true
unused_ignore = true
use_fstrings = true
value_always_true = true

# TODO: fix issues and activate
# enforce_no_unused = true
# missing_parameter_annotation = true
# missing_return_annotation = true
# suggested_return_type = true


[tool.deptry]
ignore_obsolete = [
]
ignore_missing = [
]
ignore_transitive = [
  "click",
]
exclude = [
    '.tox', 'tests', 'sandbox', 'doc', 'scripts'
]
